2017-03-31  Dirk Eddelbuettel  <edd@debian.org>

	* R/init.R (.onLoad): The 'isRStudio' test has been refined to allow
	RStudio versions 1.1.129 or later which no longer conflict with Boost
	* R/anytime.R (testFormat, testOutput): Message reworded

2017-03-21  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.2.2

	* src/init.c (R_init_anytime): Call R_registerRoutines()
	and R_useDynamicSymbols()

	* src/anytime.cpp (setMaxIntAsDate): Added setter accessible via :::
	(setMaxIntAsYYYYMMDD): Made return type void

2017-03-20  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp (anytime_cpp): Minor refactoring

2017-03-18  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/anytime.cpp (anytime_cpp): Another special case covering
	numeric values in the possible range of Dates now returned as
	Dates

	* tests/simpleTests.R: Additional (simple) tests

2017-03-05  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp (convertToTime): Special case for Europe/London
	post 1971-10-31 02:00
	(setInitialTZ): New helper function to store initial setup time
	zone

	* R/init.R (.onLoad): Register initial setup timezone used by
	Boost code

	* tests/gh_issues_36_51.R: New illustration for #36 and #51

2017-02-26  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp (anytime_cpp): Convert large integer values in
	the range of POSIXct values as well (whereas before only eg
	20101112L worked)
	(setMaxIntAsYYYYMMDD): New (unexported but R-accessible) helper to
	set the cutoff value, leaving default at 29991231

	* tests/gh_issue_56.R: Added simple test script

2017-02-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.2.1

	* R/anytime.R (anydate, utcdate): If converting from POSIXt, also use
	timezone argument

2017-02-04  Dirk Eddelbuettel  <edd@max.eddelbuettel.com>

	* src/anytime.cpp (sformats[]): Add format with to-be-skipped