@@ -6,3 +6,4 @@
 ^local
 ^\.codecov\.yml$
 ^LICENSE$
+^.editorconfig$
