@@ -1,8 +1,8 @@
 Package: anytime
 Type: Package
 Title: Anything to 'POSIXct' or 'Date' Converter
-Version: 0.2.2
-Date: 2017-03-21
+Version: 0.2.2.1
+Date: 2017-04-02
 Author: Dirk Eddelbuettel
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Description: Convert input in any one of character, integer, numeric, factor,
@@ -13,7 +13,7 @@ BugReports: https://github.com/eddelbuettel/anytime/issues
 License: GPL (>= 2)
 Encoding: UTF-8
 Depends: R (>= 3.2.0)
-Imports: Rcpp (>= 0.12.9)
-LinkingTo: Rcpp (>= 0.12.9), BH
+Imports: Rcpp (>= 0.12.9), RApiDatetime
+LinkingTo: Rcpp (>= 0.12.9), BH, RApiDatetime
 Suggests: gettz
 RoxygenNote: 6.0.1
