@@ -31,6 +31,8 @@
 #define RCPP_NEW_DATE_DATETIME_VECTORS 1
 #include <Rcpp.h>
 
+#include <RApiDatetime.h>
+
 namespace bt = boost::posix_time;
 namespace ba = boost::algorithm;
 
@@ -462,4 +464,226 @@ void setMaxIntAsDate(const int val) {
 // [[Rcpp::export]]
 void setInitialTZ(std::string tz) {
     setupTZ = tz;
+}
+
+// R-based ranytime below
+
+const std::string rformats[] = {
+    "%Y-%m-%d %H:%M:%OS",
+    "%Y-%m-%d %H%M%OS",
+    "%Y/%m/%d %H:%M:%OS",
+    "%Y%m%d %H%M%OS",
+    "%Y%m%d %H:%M:%OS",
+    "%m/%d/%Y %H:%M:%OS",
+    "%m-%d-%Y %H:%M:%OS",
+    // "%d.%m.%Y %H:%M:%OS",
+
+    "%Y-%b-%d %H:%M:%OS",
+    "%Y/%b/%d %H:%M:%OS",
+    "%Y%b%d %H%M%OS",
+    "%Y%b%d %H:%M:%OS",
+    "%b/%d/%Y %H:%M:%OS",
+    "%b-%d-%Y %H:%M:%OS",
+
+    "%d.%b.%Y %H:%M:%OS",
+    "%d%b%Y %H%M%OS",
+    "%d%b%Y %H:%M:%OS",
+    "%d-%b-%Y %H%M%OS",
+    "%d-%b-%Y %H:%M:%OS",
+
+    "%Y-%B-%d %H:%M:%OS",
+    "%Y/%B/%d %H:%M:%OS",
+    "%Y%B%d %H%M%OS",
+    "%Y%B%d %H:%M:%OS",
+    "%B/%d/%Y %H:%M:%OS",
+    "%B-%d-%Y %H:%M:%OS",
+    "%d.%B.%Y %H:%M:%OS",
+
+    // see http://stackoverflow.com/questions/39259184/formatting-dates-with-r for next one
+    "%a %b %d %H:%M:%OS %Y",
+
+    // see RFC 822 and standard Unix use eg mail headers (but no TZ or UTC offset on input :-/ )
+    "%a %d %b %Y %H:%M:%OS",
+
+    // See the Boost documentation, tz specifications (%q %Q %z %Z) are _ignored_ on input
+    // http://www.boost.org/doc/libs/1_62_0/doc/html/date_time/date_time_io.html#date_time.time_input_facet
+    "%Y-%m-%d %H:%M:%S%Z",
+
+    // Issue 47: support formats like "Thu Jan 17 09:29:10 EST 2013" by ignoring the three-char TZ
+    // also support fractional seconds if present
+    "%a %b %d %H:%M:%OS xxx %Y",
+
+    "%Y-%m-%d",
+    "%Y%m%d",
+    "%m/%d/%Y",
+    "%m-%d-%Y",
+
+    "%Y-%b-%d",
+    "%Y%b%d",
+    "%b/%d/%Y",
+    "%b-%d-%Y",
+
+    "%d%b%Y"
+    "%d-%b-%Y"
+
+    "%Y-%B-%d",
+    "%Y%B%d",
+    "%B/%d/%Y",
+    "%B-%d-%Y"
+
+};
+const size_t nrformats = sizeof(rformats)/sizeof(rformats[0]);
+
+// conversion of ptime object to double done by ptToDouble()
+double r_stringToTime(const std::string s, const std::string tz,
+                      const bool asUTC=false, const bool asDate=false) {
+
+    bool done = false;
+
+    double res = NA_REAL;
+    SEXP ss = Rcpp::wrap(s);
+    SEXP tzs = Rcpp::wrap(tz);
+
+    // loop over formats and try them til one fits
+    for (size_t i=0; !done && i < nrformats; ++i) {
+        SEXP fs = Rcpp::wrap(rformats[i]);
+        SEXP posixlt = Rstrptime(ss, fs, tzs);
+        SEXP posixct = asPOSIXct(posixlt, tzs);
+        res = Rcpp::as<double>(posixct);
+        if (!Rcpp::traits::is_na<REALSXP>(res)) {
+            done = true;
+        }
+
+    }
+    //if (R_IsNA(res)) return NA_REAL; // NA for non-parsed dates
+    return res;
+}
+
+template <class T, int RTYPE>
+Rcpp::NumericVector r_convertToTime(const Rcpp::Vector<RTYPE>& sxpvec,
+                                    const std::string& tz = "UTC",
+                                    const bool asUTC = false,
+                                    const bool asDate = false) {
+
+    // step one: create a results vector, and class it as POSIXct
+    int n = sxpvec.size();
+    Rcpp::DatetimeVector pv(n, tz.c_str());
+    // if (asDate) {
+    //     pv.attr("class") = Rcpp::CharacterVector::create("Date");
+    // } else {
+    //     pv.attr("class") = Rcpp::CharacterVector::create("POSIXct", "POSIXt");
+    // }
+    // pv.attr("tzone") = tz;
+
+    // step two: loop over input, cast each element to string and then convert
+    for (int i=0; i<n; i++) {
+
+        // if we do not explicit assign to int, double or string then clang
+        // flags a UBSAN error (which was the case for release 0.0.1 to 0.0.3)
+        // but with templating to T this is straightforward enough
+        T val = sxpvec[i];
+        std::string s = boost::lexical_cast<std::string>(val);
+        if (s == "NA") {
+            pv[i] = NA_REAL;
+        } else {
+            if (debug) Rcpp::Rcout << "before tests: " << s << std::endl;
+            // Boost Date_Time gets the 'YYYYMMDD' format wrong, even
+            // when given as an explicit argument. So we need to test here.
+            // While we're at it, may as well test for obviously wrong data.
+            std::string one = "", two = "", three = "", inp = s;
+            stringSplitter(inp, " ", one, two);
+            if (isAtLeastGivenLengthAndAllDigits(one, 8)) {
+                one = one.substr(0, 4) + "-" + one.substr(4, 2) + "-" + one.substr(6,2);
+
+                if ((two.size()==5 || two.size() >= 8) &&          	// if we have hh:mm or hh:mm:ss[.ffffff]
+                    !isAtLeastGivenLengthAndAllDigits(two, 6)) { 	// and it is not hhmmss
+                    three = "";    	                     		// do nothing, three remains ""
+                } else {
+                    inp = two;
+
+                    // The 'YYYYMMDD' format can of course be followed by either
+                    // 'HHMMSS' or 'HHMM' or 'HHMMSS.fffffff' so we cover these cases
+                    stringSplitter(inp, ".", two, three);
+                    if (two.size() == 6) {
+                        two = two.substr(0, 2) + ":" + two.substr(2, 2) + ":" + two.substr(4,2);
+                    } else if (two.size() == 4) {
+                        two = two.substr(0, 2) + ":" + two.substr(2, 2);
+                    }
+                }
+
+                s = one + " " + two;
+                if (three != "") {
+                    s = s + "." + three;
+                }
+
+                if (debug) Rcpp::Rcout << "s: " << s << " one: " << one << " two: ";
+                if (debug) Rcpp::Rcout << two << " " << " three: " << three << std::endl;
+
+            } else if (isAtLeastGivenLengthAndAllDigits(two, 6)) {
+                if (two.size() == 6) {
+                    two = two.substr(0, 2) + ":" + two.substr(2, 2) + ":" + two.substr(4,2);
+                }
+                s = one + " " + two;
+            } else {
+                if (debug) Rcpp::Rcout << "One: " << one << " " << "two: " << two << std::endl;
+            }
+
+            if (debug) Rcpp::Rcout << "before parse: " << s << std::endl;
+
+            // Given the string, convert to a POSIXct using an interim double
+            // of fractional seconds since the epoch
+            pv[i] = r_stringToTime(s, tz, asUTC, asDate);
+        }
+    }
+    // There is an issue with datetime parsing under TZ=Europe/London, see eg #36 and #51
+    // We think this is caused by Boost but as we return to R for formating we need to adjust
+    if (setupTZ == "Europe/London") {					// #nocov start
+        //Rcpp::Rcerr << "Putzing\n";
+        const double cutoff = 57722400; // 1971-10-31 02:00:00 was a policy change
+        for (int i=0; i<pv.size(); i++) {
+            pv[i] = pv[i] + 3600 * (pv[i] >= cutoff);
+        }
+    }                                                                   // #nocov end
+    if (asDate) {               // if we wanted Date types, set class
+        pv.attr("class") = Rcpp::CharacterVector::create("Date");
+    }
+    return pv;
+}
+
+
+// [[Rcpp::export]]
+Rcpp::NumericVector r_anytime_cpp(SEXP x,
+                                  const std::string& tz = "UTC",
+                                  const bool asUTC = false,
+                                  const bool asDate = false) {
+
+    if (Rcpp::is<Rcpp::CharacterVector>(x)) {
+        // already a character -- so parse from character and convert
+        return r_convertToTime<const char*, STRSXP>(x, tz, asUTC, asDate);
+
+    } else if ((Rcpp::is<Rcpp::NumericVector>(x) && REAL(x)[0]    <= maxIntAsDate) ||
+               (Rcpp::is<Rcpp::IntegerVector>(x) && INTEGER(x)[0] <= maxIntAsDate)    ) {
+        // if numeric or integer and below date cutoff, treat as (already numeric/int) date
+        return Rcpp::DateVector(x);
+
+    } else if (Rcpp::is<Rcpp::IntegerVector>(x) && INTEGER(x)[0] <= maxIntAsYYYYMMDD) {
+        // actual integer date notation: convert to string via lexical cast
+        // and then parse that string as usual
+        return r_convertToTime<int, INTSXP>(x, tz, asUTC, asDate);
+
+    } else if (Rcpp::is<Rcpp::NumericVector>(x) && REAL(x)[0] <= maxIntAsYYYYMMDD) {
+        // actual integer date notation: convert to string via lexical cast
+        // and then parse that string as usual
+        return r_convertToTime<double, REALSXP>(x, tz, asUTC, asDate);
+
+    } else if (Rcpp::is<Rcpp::NumericVector>(x) || Rcpp::is<Rcpp::IntegerVector>(x)) {
+        // now we actually should have a proper large numeric (ie as.numeric(Sys.time())
+        // so we can simply return as the already created Datetime vector
+        return Rcpp::DatetimeVector(x, asUTC ? "UTC" : tz.c_str());
+
+    } else {
+        Rcpp::stop("Unsupported Type");	// bug in 0.12.{7,8}; Rcpp 0.12.9 or latyer ok
+        return R_NilValue;//not reached
+    }
+
 }
